stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_no_such_block_info_property.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "f4f61c95b8100ce2ccc709a481727b002fac137e607966ebd4b4024b5f60e552",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'get-burn-block-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 963,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 963,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "38477a2a6242b1f5ea78ebc600e3cdd46f6b7d4d0d4cf778bb05c117bcace656",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of block unknown property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "268a76cc165d32783b5b3a3d5e9330a2c2ca3fdb75b73406b8130d5c4f8c6eff",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of block unknown property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a219036ca293fa617179b88967a6429beb239201a2af88e532e67ce4b1be2ce2",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'get-burn-block-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 963,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 963,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b378a0f67dbab90e40536006d0c189ffe300cdff248cd42daa26179381d621d6",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of block unknown property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b82f14e085d409dbc25e576f7463fe4b98482b4e7f95eff1483702c2cce61d03",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of block unknown property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b5b8b73d3be7cbb165a1988e1d7ff3451b5904ebc745545e35dd6fdec94960d",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-block-info-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of block unknown property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
]
