stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_no_such_data_variable.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "bcccc5b765cdc772cc53f74e7cbfbe72f47d5e63de644373bf30c090c503074c",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "203f538593aa699761eca56ef17ea8bc518f7f82c793dfe67409554013e58d99",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "be8dde9fcf636ffa1be1db0c44b000276926d1556eb9968f6e9a2601c7b37e7c",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "97f6cf194776a1a84815e93cd1bffbf6a488568ed55cf4d96d1e2c3d94532952",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ddbe424e407b7fd121cb6dc65f5feb7cc09e9c9076908e547e50105e22b48a6a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0f22acad15a59a4609244bf14a1f1eca2a801e0e078aa41bdb3843cafe48abc4",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3d010a184b1941b0e6bff12953bf767d174e607288058ba708881af47b5180ec",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-data-var-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of unresolved persisted variable \'cursor\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2402,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2402,
    ),
  )),
]
